Meus exploratórios automatizados

--- a/log.html
+++ b/log.html
@@ -2074,31 +2074,31 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,38],[],[[5,0,6,[7,8],[0,32,3,9],[[1,10,0,0,0,0,0,0,[0,33,0],[[33,5,11]]],[2,12,0,0,0,0,0,0,[0,35,0],[[35,5,13]]]]],[14,0,15,[16,17],[0,35,2,9],[[1,10,0,0,0,0,0,0,[0,37,0],[[37,5,11]]],[2,12,0,0,0,0,0,0,[0,38,0],[[38,5,13]]]]]],[],[2,0,2,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,9342],[],[[5,0,6,[7,8],[0,324,9017,9],[[1,10,11,0,0,0,0,0,[1,325,1235],[[0,12,13,0,14,15,0,0,[1,326,1200],[[326,2,16]]],[0,17,13,0,18,0,0,0,[1,1526,34],[]]]],[0,19,11,0,0,0,0,0,[0,1561,7780],[[0,20,13,0,21,22,0,0,[1,1561,2348],[[1561,2,23]]],[0,24,13,0,25,26,0,0,[0,3909,5431],[[9337,2,27],[9337,5,9]]]]]]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*C:\\CursoUdemy\\RobotFramework\\WebTesting\\automacao-robot\\amazon_testes.robot","*amazon_testes.robot","*<p>Essa suíte testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu eletrônicos do site Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Setup failed:\nNo keyword with name 'Abrir o navegador' found.\n\nAlso teardown failed:\nNo keyword with name 'Fechar o navegador' found.","*Abrir o navegador","*No keyword with name 'Abrir o navegador' found.","*Fechar o navegador","*No keyword with name 'Fechar o navegador' found.","*Caso de Testes 02 - Pesquisa de um Produto","*<p>Esse teste verifica a busca de um produto\x3c/p>","*busca_produtos","*lista_busca"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*C:\\CursoUdemy\\RobotFramework\\WebTesting\\automacao-robot\\amazon_testes.robot","*amazon_testes.robot","*<p>Essa suíte testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu eletrônicos do site Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Element '[href='/Eletronicos-e-Tecnologia/b/?ie=UTF8&amp;node=16209062011&amp;ref_=nav_cs_electronics']' not visible after 5 seconds.","*Abrir o navegador","*amazon_resources","*Open Browser","*SeleniumLibrary","*<p>Opens a new browser instance to the optional <code>url\x3c/code>.\x3c/p>","*browser=chrome","*Opening browser 'chrome' to base url 'None'.","*Maximize Browser Window","*<p>Maximizes current browser window.\x3c/p>","*Acessar a home page do site Amazon.com.br","*Go To","*<p>Navigates the current browser window to the provided <code>url\x3c/code>.\x3c/p>","*url=${URL}","*Opening url '<a href=\"https://www.amazon.com.br\">https://www.amazon.com.br\x3c/a>'","*Wait Until Element Is Visible","*<p>Waits until the element <code>locator\x3c/code> is visible.\x3c/p>","*locator=${MENU_ELETRONICOS}","*\x3c/td>\x3c/tr><tr><td colspan=\"3\"><a href=\"selenium-screenshot-3.png\"><img src=\"selenium-screenshot-3.png\" width=\"800px\">\x3c/a>"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":2,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":1,"label":"busca_produtos","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"label":"categorias","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"label":"lista_busca","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"label":"menus","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":2,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:09","fail":1,"label":"categorias","pass":0,"skip":0},{"elapsed":"00:00:09","fail":1,"label":"menus","pass":0,"skip":0}],[{"elapsed":"00:00:09","fail":1,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
 window.output["errors"] = [];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1761108422366;
+window.output["baseMillis"] = 1761188762857;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 54;
+window.output["generated"] = 9364;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
 </script>
 <script type="text/javascript">
-window.settings = {"defaultLevel":"INFO","minLevel":"FAIL","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
+window.settings = {"defaultLevel":"INFO","minLevel":"INFO","reportURL":"report.html","rpa":false,"splitLogBase":"log","title":""};
 </script>
 <title></title>
 </head>
