--- a/report.html
+++ b/report.html
@@ -1887,22 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,4,[],[0,0,38],[],[[5,0,6,[7,8],[0,32,3,9],[]],[10,0,11,[12,13],[0,35,2,9],[]]],[],[2,0,2,0]];
+window.output["suite"] = [1,2,3,4,[],[0,0,9342],[],[[5,0,6,[7,8],[0,324,9017,9],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*C:\\CursoUdemy\\RobotFramework\\WebTesting\\automacao-robot\\amazon_testes.robot","*amazon_testes.robot","*<p>Essa suíte testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu eletrônicos do site Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Setup failed:\nNo keyword with name 'Abrir o navegador' found.\n\nAlso teardown failed:\nNo keyword with name 'Fechar o navegador' found.","*Caso de Testes 02 - Pesquisa de um Produto","*<p>Esse teste verifica a busca de um produto\x3c/p>","*busca_produtos","*lista_busca"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Amazon Testes","*C:\\CursoUdemy\\RobotFramework\\WebTesting\\automacao-robot\\amazon_testes.robot","*amazon_testes.robot","*<p>Essa suíte testa o site da Amazon.com.br\x3c/p>","*Caso de Teste 01 - Acesso ao menu &quot;Eletrônicos&quot;","*<p>Esse teste verifica o menu eletrônicos do site Amazon.com.br e verifica a categoria Computadores e Informática\x3c/p>","*categorias","*menus","*Element '[href='/Eletronicos-e-Tecnologia/b/?ie=UTF8&amp;node=16209062011&amp;ref_=nav_cs_electronics']' not visible after 5 seconds."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:00","fail":2,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":1,"label":"busca_produtos","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"label":"categorias","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"label":"lista_busca","pass":0,"skip":0},{"elapsed":"00:00:00","fail":1,"label":"menus","pass":0,"skip":0}],[{"elapsed":"00:00:00","fail":2,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:09","fail":1,"label":"All Tests","pass":0,"skip":0}],[{"elapsed":"00:00:09","fail":1,"label":"categorias","pass":0,"skip":0},{"elapsed":"00:00:09","fail":1,"label":"menus","pass":0,"skip":0}],[{"elapsed":"00:00:09","fail":1,"id":"s1","label":"Amazon Testes","name":"Amazon Testes","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1761108422366;
+window.output["baseMillis"] = 1761188762857;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 54;
+window.output["generated"] = 9364;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
